Changes for npg_sequencescape_warehouse
=======================================

 - exclude values for column names not present in this warehouse
 - load q30 and q40 yields from qX_Yield autoqc results

release 43.0.3
 - test data changes to ensure compatibility with npg_qc release 64.1
 - travis build: request uuid dev libraries are present

release 43.0.2
 - adds TODO test to fix temporary DB fail test in npg_warehouse-loader

release 43.0.1
 - meaningful variable name

release 43.0
 - Changes needed to convert an svn project to a git project.
   Only recent history has been transferred from the svn project.
 - Travis CI integration added.
 - LIMs driver type option for the warehouse loader, defaults to
   ml_warehouse_fc_cache
 - stop loading LIMs data that are only available via an xml LIMs driver
 - try to load LIMs data for all runs that are being loaded, remove 'recent' option
 - stop loading 'is_dev' column of the npg_information table

release 42.1.1

release 42.1
 - Code changes to eliminate warnings and PBP issues when running under Perl 5.22.2

release 42.0
 - Updated DBIx binding.
 - DBIx binding generator filters code to make it more acceptable for perlcritic.

See earlier project history in the internal SVN data_handling project.
